[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tls-trust-analyzer"
version = "0.1.0"
description = "CLI tool to analyze TLS certificate chains and explain trust decisions with structured JSON output."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "PwNsNeG" }
]
keywords = ["tls", "x509", "certificates", "pki", "trust", "chain", "security", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]

dependencies = [
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "ruff>=0.5.0",
  "mypy>=1.8.0",
  "types-requests>=2.31.0.20240106",
]

[project.scripts]
tls-trust-analyzer = "tls_trust_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_configs = true

